--- a/continues.html
+++ b/continues.html
@@ -42,7 +42,7 @@
   vertical-align: top;
   color: #404040;
   background-color: white;
-  background-image: url("img/id.png");
+  background-image: url("id.png");
   background-position: 1px 2px; 
   background-repeat: no-repeat;
   padding: 10px 35px;
@@ -107,7 +107,7 @@
 					</tr>
 					<tr>
 						<td>
-						<input type="image" src="img/btn.png" width="400" height="44" name="I1"></td>
+						<input type="image" src="btn.png" width="400" height="44" name="I1"></td>
 					</tr>
 					<tr>
 						<td height="27"></td>
@@ -123,7 +123,7 @@
 						<table border="0" width="100%" cellspacing="0" cellpadding="0">
 							<tr>
 								<td width="142">
-								<img border="0" src="img/mgs-1.png" width="400" height="24"></td>
+								<img border="0" src="mgs-1.png" width="400" height="24"></td>
 								<td>&nbsp;</td>
 							</tr>
 						</table>
